# libbotball

./: CMakeLists.txt  README.md
cmake/: FindAurora.cmake  FindWallaby.cmake
include/botball/: botball.h  botball.hpp
src/: botball.cpp  botball_c.cpp
